# LHM_Parser

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  build.ps1  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml
LHM_Parser/: LHM_Parser.py
