[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "novavoidhowl", email = "me@novavoidhowl.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent"
]
dependencies = [
  'requests >= 2.28.2'
]
description = "A small library to read and parse data from Libre Hardware Monitor (LHM) json web endpoint."
name = "LHM_Parser"
readme = "README.md"
requires-python = ">=3.11.2"
version = "0.0.1"

[project.optional-dependencies]
dev = [
  'pre-commit'
]

[project.urls]
"Bug Tracker" = "https://github.com/NovaVoidHowl/LHM_Parser/issues"
"Homepage" = "https://github.com/NovaVoidHowl/LHM_Parser"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
indent_width = 2
spaces_before_comment = 2
split_before_logical_operator = true
